[project]
name = "langgraph-nutrition-orchestrator"
version = "0.1.0"
description = "LangGraph orchestration layer for food-related LLM agents with safety guardrail"
authors = [
  { name = "NTU HPB Team" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "langgraph-cli[inmem]>=0.0.14",
  "langgraph>=0.0.43",
  "langchain>=0.3.26,<0.4",
  # AWS Bedrock runtime
  "boto3>=1.34",
  # 新增：食物识别相关依赖
  "openai>=1.0.0",
  "pillow>=9.0.0",
  "requests>=2.28.0",
  "python-dotenv>=1.0.0",
  "pandas",
  "numpy",
  "bs4",
  "rapidfuzz",
  "googlemaps",
  "opencv-python",
  "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["langgraph_app*"]
exclude = ["guardrails*", "tests*", "docs*"]